# docs/swagger.yaml
@@ -1,98 +1,99 @@
-# info:
-#   contact: {}
-# paths: {}
-# swagger: "2.0"
-# swagger/swagger.yaml
-swagger: "2.0"
+definitions:
+  controllers.ErrorResponse:
+    properties:
+      message:
+        type: string
+    type: object
+  models.Score:
+    properties:
+      country:
+        type: string
+      score:
+        type: number
+      state:
+        type: string
+      user_name:
+        type: string
+    type: object
 info:
-  title: "Online Gaming Leaderboard API"
-  description: "API for managing highscores in an online gaming site"
-  version: "1.0.0"
-host: "localhost:8080"
-basePath: "/"
-schemes:
-  - "http"
-consumes:
-  - "application/json"
-produces:
-  - "application/json"
+  contact: {}
 paths:
-  /submit:
-    post:
-      summary: "Submit score"
-      consumes:
-        - "application/json"
-      produces:
-        - "application/json"
-      parameters:
-        - in: "body"
-          name: "body"
-          description: "Score object"
-          required: true
-          schema:
-            $ref: "#/definitions/Score"
-      responses:
-        200:
-          description: "Score submitted successfully"
-        400:
-          description: "Invalid request"
   /get_rank:
     get:
-      summary: "Get rank"
-      produces:
-        - "application/json"
+      description: Get rank of a user
       parameters:
-        - in: "query"
-          name: "user_name"
-          description: "User name"
-          required: true
-          type: "string"
-        - in: "query"
-          name: "scope"
-          description: "Scope: state, country, or globally"
-          required: true
-          type: "string"
+      - description: User name
+        in: query
+        name: user_name
+        required: true
+        type: string
+      - description: 'Scope: state, country, or globally'
+        in: query
+        name: scope
+        required: true
+        type: string
+      produces:
+      - application/json
       responses:
-        200:
-          description: "User rank"
+        "200":
+          description: User rank
           schema:
-            type: "integer"
-        400:
-          description: "Invalid request"
+            type: integer
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/controllers.ErrorResponse'
+      summary: Get rank
   /list_top_n:
     get:
-      summary: "List top N"
-      produces:
-        - "application/json"
+      description: List top N ranks
       parameters:
-        - in: "query"
-          name: "n"
-          description: "Number of ranks to list"
-          required: true
-          type: "integer"
-        - in: "query"
-          name: "scope"
-          description: "Scope: state, country, or globally"
-          required: true
-          type: "string"
+      - description: Number of ranks to list
+        in: query
+        name: "n"
+        required: true
+        type: integer
+      - description: 'Scope: state, country, or globally'
+        in: query
+        name: scope
+        required: true
+        type: string
+      produces:
+      - application/json
       responses:
-        200:
-          description: "Top N scores"
+        "200":
+          description: Top N scores
           schema:
-            type: "array"
             items:
-              $ref: "#/definitions/Score"
-        400:
-          description: "Invalid request"
-definitions:
-  Score:
-    type: "object"
-    properties:
-      user_name:
-        type: "string"
-      country:
-        type: "string"
-      state:
-        type: "string"
-      score:
-        type: "number"
+              $ref: '#/definitions/models.Score'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/controllers.ErrorResponse'
+      summary: List top N
+  /submit:
+    post:
+      consumes:
+      - application/json
+      description: Submit score to the system
+      parameters:
+      - description: Score object
+        in: body
+        name: score
+        required: true
+        schema:
+          $ref: '#/definitions/models.Score'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Score submitted successfully
+          schema:
+            type: string
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/controllers.ErrorResponse'
+      summary: Submit score
+swagger: "2.0"
